// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader Cascader baseVue demo works fine 1`] = `
<div>
  <div
    class="t-input__wrap t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader Cascader checkStrictlyVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <div
    class="t-input__wrap t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          1/1.1/1.1.2/1.1.2.1
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          2
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader Cascader collapsedVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          选项一/子选项一
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark"
        >
          +2
        </span>
      </div>
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          选项一/子选项一
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          style="color: rgb(237, 123, 47);"
        >
          +2
        </span>
      </div>
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          选项一/子选项一
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span>
           
          <span
            style="color: rgb(0, 168, 112);"
          >
            +2
          </span>
        </span>
      </div>
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader Cascader disabledVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <div
    class="t-input__wrap t-cascader"
  >
    <div
      class="t-input t-size-m t-is-disabled t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        disabled="disabled"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon t-is-disabled"
          disabled="disabled"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-cascader"
  >
    <div
      class="t-input t-size-m t-is-disabled t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-is-disabled t-tag--disabled"
        >
          选项一/子选项一
        </span>
      </div>
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon t-is-disabled"
          disabled="disabled"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader Cascader ellipsisVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row t-cascader-demo"
>
  <div
    class="t-input__wrap t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          当选项一数据展示文本过长时/子选项一
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader Cascader filterableVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <div
    class="t-input__wrap t-select-input--empty t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        type="text"
        unselectable="off"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          当选项一数据展示文本过长时/子选项一
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder=""
        type="text"
        unselectable="off"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-input__wrap t-select-input--empty t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        type="text"
        unselectable="off"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader Cascader keysVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <div
    class="t-input__wrap t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          选项一/子选项一
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader Cascader loadVue demo works fine 1`] = `
<div>
  <div
    class="t-input__wrap t-select-input--empty t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader Cascader maxVue demo works fine 1`] = `
<div>
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select-input--empty t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader Cascader multipleVue demo works fine 1`] = `
<div
  class="t-cascader-demo"
>
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          选项一/子选项一
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader Cascader showAllLevelsVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <div
    class="t-input__wrap t-select-input--empty t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select-input--empty t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader Cascader sizeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <div
    class="t-input__wrap t-cascader"
  >
    <div
      class="t-input t-size-s t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-input__wrap t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-input__wrap t-cascader"
  >
    <div
      class="t-input t-size-l t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader Cascader triggerVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <div
    class="t-input__wrap t-select-input--empty t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-input__wrap t-select-input--empty t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader Cascader valueModeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select-input--empty t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select-input--empty t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
   
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-select-input--empty t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Cascader Cascader valueTypeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-row"
>
  
  [
  "1",
  "1.1"
]
  
  <div
    class="t-input__wrap t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      />
      <input
        autocomplete=""
        class="t-input__inner"
        placeholder="请选择"
        readonly="readonly"
        type="text"
        unselectable="on"
      />
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
  
  [
  [
    "1",
    "1.1"
  ],
  [
    "1",
    "1.2"
  ]
]
  
  <div
    class="t-input__wrap t-tag-input t-tag-input--break-line t-select-input--multiple t-cascader"
  >
    <div
      class="t-input t-size-m t-is-default t-is-readonly t-input--prefix t-input--suffix"
    >
      <div
        class="t-input__prefix"
      >
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          选项一/子选项一
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
        <span
          class="t-tag t-tag--default t-size-m t-tag--dark t-tag--close"
        >
          选项一/子选项二
          <svg
            class="t-icon t-icon-close t-tag__icon-close"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </span>
      </div>
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-fake-arrow t-cascader__icon"
          fill="none"
          height="16"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M3.75 5.7998L7.99274 10.0425L12.2361 5.79921"
            stroke="black"
            stroke-opacity="0.9"
            stroke-width="1.3"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
